--- a/rule.html
+++ b/rule.html
@@ -44,13 +44,13 @@
                         <div class="bg-faded p-5 d-flex ms-auto rounded">
                             <h2 class="section-heading mb-0">
                                 <span class="section-heading-upper">사자, 기린, 코끼리, 병아리(닭)</span>
-                                <span class="section-heading-lower">장기말</span>
+                                <span class="section-heading-lower">기물</span>
                             </h2>
                         </div>
                     </div>
                     <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/products-01.jpg" alt="..." />
                     <div class="product-item-description d-flex me-auto">
-                        <div class="bg-faded p-5 rounded"><p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea, or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p></div>
+                        <div class="bg-faded p-5 rounded"><p class="mb-0">이동이 가능한 방향<br>사자 : 모든 방향<br>기린 : 상, 하, 좌, 우<br>코끼리 : 대각선<br>병아리 : 전방<br>닭 : 상, 하, 좌, 우 & 전방 대각선<br>모든 기물은 한 칸씩만 이동이 가능<br>병아리는 최전방에 도달하면 닭으로 승급이 가능</p></div>
                     </div>
                 </div>
             </div>
@@ -61,8 +61,8 @@
                     <div class="product-item-title d-flex">
                         <div class="bg-faded p-5 d-flex me-auto rounded">
                             <h2 class="section-heading mb-0">
-                                <span class="section-heading-upper">Delicious Treats, Good Eats</span>
-                                <span class="section-heading-lower">Bakery & Kitchen</span>
+                                <span class="section-heading-upper">2가지의 승리조건</span>
+                                <span class="section-heading-lower">승리조건</span>
                             </h2>
                         </div>
                     </div>
