--- a/rule.html
+++ b/rule.html
@@ -48,7 +48,7 @@
                             </h2>
                         </div>
                     </div>
-                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/products-01.jpg" alt="..." />
+                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/rule1.jpg" alt="..." />
                     <div class="product-item-description d-flex me-auto">
                         <div class="bg-faded p-5 rounded"><p class="mb-0">이동이 가능한 방향<br>사자 : 모든 방향<br>기린 : 상, 하, 좌, 우<br>코끼리 : 대각선<br>병아리 : 전방<br>닭 : 상, 하, 좌, 우 & 전방 대각선<br>모든 기물은 한 칸씩만 이동이 가능<br>병아리는 최전방에 도달하면 닭으로 승급이 가능</p></div>
                     </div>
@@ -66,7 +66,7 @@
                             </h2>
                         </div>
                     </div>
-                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/products-02.jpg" alt="..." />
+                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/rule2.jpg" alt="..." />
                     <div class="product-item-description d-flex ms-auto">
                         <div class="bg-faded p-5 rounded"><p class="mb-0">Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime. We source our ingredients from local, oragnic farms whenever possible, alongside premium vendors for specialty goods.</p></div>
                     </div>
