--- a/rule.html
+++ b/rule.html
@@ -84,7 +84,7 @@
                             </h2>
                         </div>
                     </div>
-                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/products-03.jpg" alt="..." />
+                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/rule3.jpg" alt="..." />
                     <div class="product-item-description d-flex me-auto">
                         <div class="bg-faded p-5 rounded"><p class="mb-0">상대의 기물을 잡으면 포로가 된다.<br>포로가 된 기물은 내 기물로 활용할 수 있다.<br>단, 기물을 보드에 놓는 행위도 턴을 소모한다.</p></div>
                     </div>
