--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
                     <div class="col-xl-9 mx-auto">
                         <div class="cta-inner bg-faded text-center rounded">
                             <h2 class="section-heading mb-4">
-                                <span class="section-heading-upper">Our Project</span>
-                                <span class="section-heading-lower">Team Safari</span>
+                                <span class="section-heading-upper">abc</span>
+                                <span class="section-heading-lower">ab</span>
                             </h2>
-                            <p class="mb-0"></p>
+                            <p class="mb-0">asdf</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; 프로그래머스 인공지능 데브코스 3기 B-3 2022</p></div>
+            <div class="container"><p class="m-0 small">Copyright &copy; Programmers AI Dev course 3기 B-3 2022</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
