--- a/rule.html
+++ b/rule.html
@@ -92,7 +92,7 @@
             </div>
         </section>
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; 프로그래머스 인공지능 데브코스 3기 B-3 2022</p></div>
+            <div class="container"><p class="m-0 small">Copyright &copy; Programmers AI Dev course 3기 B-3 2022</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
