--- a/index.html
+++ b/index.html
@@ -53,12 +53,15 @@
             </div>
         </section>
         <section class="page-section cta">
+            <div style="text-align : center;">
+                <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/main.jpg" alt="..." />
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-9 mx-auto">
                         <div class="cta-inner bg-faded text-center rounded">
                             <h2 class="section-heading mb-4">
-                                <span class="section-heading-upper">abc</span>
+                                <span class="section-heading-upper">AI를 이겨보자!</span>
                                 <span class="section-heading-lower">ab</span>
                             </h2>
                             <p class="mb-0">asdf</p>
