--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
                         <div class="cta-inner bg-faded text-center rounded">
                             <h2 class="section-heading mb-4">
                                 <span class="section-heading-upper">AI를 이겨보자!</span>
-                                <span class="section-heading-lower">ab</span>
+                                <span class="section-heading-lower"><a class="nav-link text-uppercase" href="play.html">도전하러 가기</a></span>
                             </h2>
-                            <p class="mb-0">asdf</p>
+                            <p class="mb-0">
+                                
+                            </p>
                         </div>
                     </div>
                 </div>
