--- a/play.html
+++ b/play.html
@@ -38,6 +38,7 @@
                 </div>
             </div>
         </nav>
+        <audio src="/assets/Earth Appears - Brian Bolger.mp3" controls></audio>
         <section class="page-section cta">
           <div style="text-align : center;">
             <div id="unity-container" class="unity-desktop">
