--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
                 </div>
             </div>
         </nav>
-        <section class="page-section clearfix">
+        <!--section class="page-section clearfix">
             <div class="container">
                 <div class="intro">
                     <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg" alt="..." />
                     <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                         <h2 class="section-heading mb-4">
-                            <!-- span class="section-heading-upper">Fresh Coffee</span-->
+                            <span class="section-heading-upper">a</span>
                             <span class="section-heading-lower">동물장기란?</span>
                         </h2>
                         <p class="mb-3">여류 프로 쇼기 기사인 키타오 마도카가 게임 디자인을하고, 같은 여성 프로 쇼기 기사 후지타 마이코가 아트 디자인을 담당해서, 일본여자프로쇼기협회에서 발표한 보드게임. </p>
-                        <!--div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Visit Us Today!</a></div-->
+                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="play.html">도전!</a></div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section-->
         <section class="page-section cta">
             <div style="text-align : center;">
                 <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/main.jpg" alt="..." />
