--- a/index.html
+++ b/index.html
@@ -37,21 +37,22 @@
                 </div>
             </div>
         </nav>
-        <!--section class="page-section clearfix">
+        <section class="page-section clearfix">
             <div class="container">
                 <div class="intro">
-                    <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg" alt="..." />
+                    <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/main2.jpg" alt="..." />
                     <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                         <h2 class="section-heading mb-4">
-                            <span class="section-heading-upper">a</span>
-                            <span class="section-heading-lower">동물장기란?</span>
+                            <span class="section-heading-upper">why?</span>
+                            <span class="section-heading-lower">동물장기</span>
                         </h2>
-                        <p class="mb-3">여류 프로 쇼기 기사인 키타오 마도카가 게임 디자인을하고, 같은 여성 프로 쇼기 기사 후지타 마이코가 아트 디자인을 담당해서, 일본여자프로쇼기협회에서 발표한 보드게임. </p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="play.html">도전!</a></div>
+                        <p class="mb-3">기존의 동물장기는 서로 최선의 수를 두게 되면 반드시 후수가 승리<br>
+                        이 프로젝트를 통해 게임 개발 과정에서 의도치 않은 밸런스 편향이 나왔을 경우 강화학습 기반의 AI모델을 통해 게임이 공정한지 아닌지를 밝혀내는 것을 목표 </p>
+                        <!--div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="play.html">도전!</a></div-->
                     </div>
                 </div>
             </div>
-        </section-->
+        </section>
         <section class="page-section cta">
             <div style="text-align : center;">
                 <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/main.jpg" alt="..." />
@@ -61,8 +62,9 @@
                     <div class="col-xl-9 mx-auto">
                         <div class="cta-inner bg-faded text-center rounded">
                             <h2 class="section-heading mb-4">
-                                <span class="section-heading-upper">AI를 이겨보자!</span>
-                                <span class="section-heading-lower"><a class="nav-link text-uppercase" href="play.html">도전하러 가기</a></span>
+                                <span class="section-heading-upper">AI를 이겨보자</span>
+                                <span class="section-heading-lower">a</span>
+                                <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="play.html">도전!</a></div>
                             </h2>
                             <p class="mb-0">
                                 
