--- a/about.html
+++ b/about.html
@@ -51,7 +51,12 @@
                                 <span class="section-heading-upper">Team safari</span>
                                 <span class="section-heading-lower">About Our Project</span>
                             </h2>
-                            <p class="mb-0"></p>
+                            <p style="font-size:25px; color:blue">주제</p>
+                            <p class="mb-0">강화학습 기반(PPO 알고리즘)의 동물장기 AI학습 프로그램 개발</p><br>
+                            <p style="font-size:25px; color:blue">컨셉</p>
+                            <p class="mb-0">AI모델 개발 - 사람을 통한 평가 - 리밸런싱</p><br>
+                            <p style="font-size:25px; color:blue">더 알아보기</p>
+                            <p class="mb-0" style="text-decoration: underline;">유튜브 링크 예정</p>
                         </div>
                     </div>
                 </div>
@@ -63,7 +68,7 @@
                     <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg" alt="..." />
                     <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                         <h2 class="section-heading mb-4">
-                            <span class="section-heading-upper">a</span>
+                            <span class="section-heading-upper">동물장기의 개발</span>
                             <span class="section-heading-lower">동물장기란?</span>
                         </h2>
                         <p class="mb-3">여류 프로 쇼기 기사인 키타오 마도카가 게임 디자인을하고, 같은 여성 프로 쇼기 기사 후지타 마이코가 아트 디자인을 담당해서, 일본여자프로쇼기협회에서 발표한 보드게임. </p>
