--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
                         <div class="cta-inner bg-faded text-center rounded">
                             <h2 class="section-heading mb-4">
                                 <span class="section-heading-upper">AI를 이겨보자</span>
-                                <span class="section-heading-lower">a</span>
-                                <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="play.html">도전!</a></div>
+                                <span class="section-heading-lower">이길수 있겠습니까, 휴먼?</span>
+                                <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/main3.jpg" alt="..." />
                             </h2>
+                            <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="play.html">도전!</a></div>
                             <p class="mb-0">
                                 
                             </p>
